[gd_scene load_steps=23 format=3 uid="uid://1etaidk3cjh0"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_tg7ce"]
[ext_resource type="Texture2D" uid="uid://c3j7qokb34kkt" path="res://icon.svg" id="2_yljx3"]
[ext_resource type="Script" path="res://scripts/HurtBox.gd" id="3_rdh6f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh3ci"]
size = Vector2(60, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_vi0eh"]
radius = 100.045

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l22hr"]
size = Vector2(26, 26)

[sub_resource type="Animation" id="Animation_wc4t1"]
resource_name = "attack"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.6, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -3.14159, -3.14159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/HurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 60), Vector2(0, 56), Vector2(0, 60), Vector2(0, 60), Vector2(0, 56), Vector2(0, 60)]
}

[sub_resource type="Animation" id="Animation_nnfte"]
resource_name = "death"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_jbsml"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/HurtBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 44), Vector2(0, 44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_e47dr"]
resource_name = "knockback"
length = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4nldf"]
_data = {
"attack": SubResource("Animation_wc4t1"),
"death": SubResource("Animation_nnfte"),
"default": SubResource("Animation_jbsml"),
"knockback": SubResource("Animation_e47dr")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m42yg"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ag17t"]
animation = &"default"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0ejy6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fl56h"]
switch_mode = 2
advance_mode = 2
advance_condition = &"attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i82v7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_x7c6f"]
states/End/position = Vector2(548, 91)
states/Start/position = Vector2(23, 91)
states/attack/node = SubResource("AnimationNodeAnimation_m42yg")
states/attack/position = Vector2(330, 91)
states/default/node = SubResource("AnimationNodeAnimation_ag17t")
states/default/position = Vector2(178, 91)
transitions = ["Start", "default", SubResource("AnimationNodeStateMachineTransition_0ejy6"), "default", "attack", SubResource("AnimationNodeStateMachineTransition_fl56h"), "attack", "default", SubResource("AnimationNodeStateMachineTransition_i82v7")]
graph_offset = Vector2(-334, -36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlu6t"]
size = Vector2(62, 62)

[sub_resource type="Animation" id="Animation_61xw7"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(100, 100, 100, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_h4gqv"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b08h4"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0fraf"]
_data = {
"death": SubResource("Animation_61xw7"),
"default": SubResource("Animation_h4gqv"),
"hurt": SubResource("Animation_b08h4")
}

[node name="Boss" type="CharacterBody2D" groups=["boss"]]
z_index = 1
motion_mode = 1
script = ExtResource("1_tg7ce")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_yljx3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fh3ci")

[node name="VisionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRadius"]
shape = SubResource("CircleShape2D_vi0eh")

[node name="Weapon" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="Weapon"]
position = Vector2(0, 44)
script = ExtResource("3_rdh6f")
damage = 1.0
entity = "Enemy"

[node name="Sprite2D" type="Sprite2D" parent="Weapon/HurtBox"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_yljx3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/HurtBox"]
shape = SubResource("RectangleShape2D_l22hr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4nldf")
}
autoplay = "default"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_x7c6f")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attacking = false

[node name="HurtDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtDetector"]
shape = SubResource("RectangleShape2D_tlu6t")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0fraf")
}
autoplay = "default"

[connection signal="body_entered" from="VisionRadius" to="." method="_on_vision_radius_body_entered"]
[connection signal="body_exited" from="VisionRadius" to="." method="_on_vision_radius_body_exited"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="area_entered" from="HurtDetector" to="." method="_on_hurt_detector_area_entered"]
